src/main/java/com/example/fresher_manager/exception/error/UsernameAlreadyExistsException.java
package com.example.fresher_manager.exception.error;

public class UsernameAlreadyExistsException extends RuntimeException{
    public UsernameAlreadyExistsException(String message) {
        super(message);
    }
}
